# ai-usage

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  RELEASING.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vitest.config.ts
.github/workflows/: desktop-build.yml  desktop-release.yml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: service-order-redesign.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  codexbar-analysis.md
.specify/: init-options.json
doc/: ai-usage-prd  claude-code-research.md  claude-code-session-recovery-plan.md  promotion-update-guide.md
scripts/: audit-licenses.js  release.sh
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/services/: README.md
src-tauri/src/: lib.rs  main.rs  proxy.rs  registry.rs  snapshot.rs
src-tauri/src/agent_activity/: mod.rs
src-tauri/src/autostart/: mod.rs
src-tauri/src/claude_code/: mod.rs
src-tauri/src/codex/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/glm/: mod.rs
src-tauri/src/kimi/: mod.rs
src-tauri/src/notifications/: mod.rs
src-tauri/src/pipeline/: claude_code.rs  codex.rs  glm.rs  kimi.rs  mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/tray/: mod.rs
(+270 files in other folders)
