[package]
name = "ai_usage"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_usage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-notification = "2.0.0"
tauri-plugin-autostart = "2.0.0"
