[package]
name = "ai_usage"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "ai_usage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
png = "0.17"
sha2 = "0.10"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-notification = "2.0.0"
tauri-plugin-autostart = "2.0.0"
tauri-plugin-shell = "2.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }
objc2 = "0.6"
